# multiapi

./: .env.example  .gitignore  QA_REPORT.md  README.md  SENIOR_REVIEW.md  docker-compose.yml  pyproject.toml
.hermes/plans/: 2026-07-10_210000-multiapi-competitive-product.md  2026-07-13_multiapi-ui-redesign.md
app/: main.py
app/db/migrations/: 0001_init.sql
backend/: Dockerfile  requirements.txt  seed_models.py
backend/app/: auth.py  bot_main.py  brakes_monitor.py  main.py  pnl_daily.py  settle_cron.py
backend/app/core/: config.py
backend/app/db/: migrate.py  seed_models.sql  session.py
backend/app/models/: __init__.py  orm.py
backend/app/routers/: admin.py  api_keys.py  auth.py  chat.py  conversations.py  notifications.py  payment.py  referral.py  wallet.py
backend/app/schemas/: chat.py
bot/: config.py  main.py
frontend/: .dockerignore  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
frontend/components/: AppNav.tsx
frontend/lib/: admin-api.ts  sse.ts  types.ts
multiai/: README.md
multiai/admin/: Dockerfile  app.py  requirements.txt
multiai/backend/: app.py  config.example.yaml  requirements.txt
multiai/backend_old_bak/: app.py  requirements.txt  schema.sql
multiai/docs/: phase-0-complete.md
multiai/frontend/: Dockerfile  package.json  tailwind.config.ts  tsconfig.json
multiai/infra/: docker-compose.yml
tests/: test_payment_contracts.py  test_release_contracts.py
(+98 files in other folders)
