[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multiai2-backend"
version = "0.1.0"
description = "Persian AI Gateway — paid LLM reseller backend (FastAPI)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "redis>=5.0",
    "httpx>=0.27",
    "tiktoken>=0.7",
    "psycopg[binary]>=3.1",
    "python-dotenv>=1.0",
    "aiogram>=3.7",          # telegram bot (Phase later)
    "sse-starlette>=2.1",    # streaming
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
